force-app/main/default/objects/AIConversationMessage__c/AIConversationMessage__c.object-meta.xml
<CustomObject>
    <description>Represents a single message within an AI Conversation, in master-detail relationship to its parent conversation. Inherits sharing and visibility from the conversation and is deleted automatically if the parent conversation is deleted.</description>
    <label>AI Conversation Message</label>
    <nameField>
        <displayFormat>AI Message - {0000000}</displayFormat>
        <label>AI Conversation Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>💌 AI Conversation Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>