force-app/main/default/objects/AIConversationMessage__c/fields/AIConversation__c.field-meta.xml
<CustomField>
    <fullName>AIConversation__c</fullName>
    <description>The conversation this message belongs to.</description>
    <inlineHelpText>This message is deleted automatically if the parent conversation is deleted, and inherits its sharing and visibility.</inlineHelpText>
    <label>AI Conversation</label>
    <referenceTo>AIConversation__c</referenceTo>
    <relationshipLabel>AI Conversation Messages</relationshipLabel>
    <relationshipName>AIConversationMessages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>