force-app/main/default/objects/AIConversationMessage__c/fields/MessageBody__c.field-meta.xml
<CustomField>
    <fullName>MessageBody__c</fullName>
    <description>The content of this message.</description>
    <inlineHelpText>PII is masked before storage where detected. This message is deleted along with its parent conversation when that conversation reaches its Retention Expiry Date.</inlineHelpText>
    <label>Message Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>