force-app/main/default/objects/AIConversationMessage__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>Indicates who sent this message.</description>
    <inlineHelpText>Indicates who sent this message.</inlineHelpText>
    <label>Sender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>AI Agent</fullName>
            </value>
            <value>
                <fullName>System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>