force-app/main/default/objects/AIConversationMessage__c/fields/SuggestedWorkflowActionId__c.field-meta.xml
<CustomField>
    <fullName>SuggestedWorkflowActionId__c</fullName>
    <description>The AIWorkflowAction__c the model suggested in this reply, if any - parsed by AiAgentOrchestrator out of a trailing structured block in the model&apos;s own response. Never executed automatically; the chat UI reads this to offer a button, and the Workflow Action itself only ever runs when the user explicitly triggers it.</description>
    <inlineHelpText>Set only when the model&apos;s reply suggests running a Workflow Action. The action still requires explicit user confirmation to run.</inlineHelpText>
    <label>Suggested Workflow Action Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>