force-app/main/default/objects/AIConversationMessage__c/fields/TokenCount__c.field-meta.xml
<CustomField>
    <fullName>TokenCount__c</fullName>
    <description>The number of tokens this individual message contributed to the conversation&apos;s running total.</description>
    <inlineHelpText>Used to build up the parent conversation&apos;s Tokens Used total and to trace usage back to a specific turn.</inlineHelpText>
    <label>Token Count</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>